# src/docs/swagger.json
@@ -216,7 +216,7 @@
                 }
             }
         },
-        "/posts/:id": {
+        "/posts/{id}": {
             "get": {
                 "description": "Retrieve a post by its ID",
                 "consumes": [
@@ -298,7 +298,7 @@
                 }
             }
         },
-        "/posts/:id/like": {
+        "/posts/{id}/like": {
             "get": {
                 "description": "Get like count of a post by its ID",
                 "consumes": [
@@ -433,6 +433,45 @@
                         }
                     }
                 }
+            }
+        },
+        "/users/{id}": {
+            "get": {
+                "description": "Get user by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get user",
+                "operationId": "get-user",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.SwaggerUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.APIError"
+                        }
+                    }
+                }
             },
             "delete": {
                 "description": "Delete user by its ID",
@@ -468,45 +507,6 @@
                     },
                     "401": {
                         "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/api.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/:id": {
-            "get": {
-                "description": "Get user by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get user",
-                "operationId": "get-user",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.SwaggerUser"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/api.APIError"
                         }
